# docs/openapi.yaml
@@ -13,7 +13,7 @@ servers:
     description: Servidor de Producción en Railway
 
 paths:
-  /healths:
+  /health:
     get:
       summary: Estado de la API
       responses:
@@ -114,7 +114,7 @@ paths:
                 $ref: '#/components/schemas/Post'
         '400':
           $ref: '#/components/responses/BadRequest'
-  /post/{Id}:
+  /posts/{id}:
     parameters:
       -$ref: '#/components/parameters/Id'
     get:
@@ -154,7 +154,7 @@ paths:
           description: Post eliminado correctamente.
         '404':
           $ref: '#/components/responses/NotFound'
-  /posts/authors/{authorId}:
+  /posts/author/{authorId}:
     parameters:
       - name: authorId
         in: path
@@ -204,7 +204,7 @@ paths:
       responses:
         '201':
           description: Comentario creado.
-  /comments/posts/{postId}:
+  /comments/post/{postId}:
     parameters:
       - name: postId
         in: path
